--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "builddeployprod": "ng build --prod && firebase deploy",
+    "builddeploydev": "ng build --configuration=dev && firebase deploy"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.1.0",
+    "@angular/cdk": "^11.2.3",
     "@angular/common": "~11.1.0",
     "@angular/compiler": "~11.1.0",
     "@angular/core": "~11.1.0",
     "@angular/forms": "~11.1.0",
+    "@angular/material": "^11.2.3",
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
