--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [
+            ],
             "customWebpackConfig": {
               "path": "webpack.config.js"
             }
