--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ngneat/tailwind": "^6.0.3",
+    "apexcharts": "^3.26.0",
+    "chart.js": "^2.9.4",
+    "ng-apexcharts": "^1.5.9",
+    "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
