--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "builddeployprod": "ng build --prod && firebase deploy",
+    "builddeploydev": "ng build --configuration=dev && firebase deploy"
   },
   "private": true,
   "dependencies": {
@@ -16,18 +18,21 @@
     "@angular/common": "~11.1.0",
     "@angular/compiler": "~11.1.0",
     "@angular/core": "~11.1.0",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.1.0",
     "@angular/material": "^11.2.5",
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
     "@auth0/auth0-angular": "^1.3.2",
+    "@firebase/firestore-types": "^2.2.0",
     "@fortawesome/angular-fontawesome": "^0.8.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ngneat/tailwind": "^6.0.3",
     "apexcharts": "^3.26.0",
     "chart.js": "^2.9.4",
+    "firebase": "^8.3.2",
     "ng-apexcharts": "^1.5.9",
     "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
