--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
-              "node_modules/apexcharts/dist/apexcharts.min.js"
+              "node_modules/apexcharts/dist/apexcharts.min.js",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [],
             "customWebpackConfig": {
