--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "firebase": "^8.3.2",
     "ng-apexcharts": "^1.5.9",
     "ng2-charts": "^2.4.2",
+    "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
